--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Usb-travel",
+    "name": "new-school",
     "version": "1.0.0",
     "description": "website",
     "main": "index.js",
@@ -25,8 +25,6 @@
         "cssnano": "^5.0.7",
         "file-loader": "^6.2.0",
         "fs": "0.0.1-security",
-        "html-webpack-externals-plugin": "^3.8.0",
-        "html-webpack-plugin": "^5.3.2",
         "mini-css-extract-plugin": "^1.1.0",
         "mqpacker": "^7.0.0",
         "node-sass": "^6.0.1",
@@ -38,7 +36,7 @@
         "sass-loader": "^12.1.0",
         "style-loader": "^3.2.1",
         "vanillajs-datepicker": "^1.1.4",
-        "webpack": "^5.47.1",
+        "webpack": "^5.69.1",
         "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.7.2",
         "webpack-dev-server": "^3.11.2",
