--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "@babel/preset-env": "^7.14.9",
         "autoprefixer": "^10.3.1",
         "babel-loader": "^8.2.2",
-        "clean-webpack-plugin": "^4.0.0-alpha.0",
+        "clean-webpack-plugin": "^4.0.0",
         "css-loader": "^6.2.0",
         "cssnano": "^5.0.7",
         "file-loader": "^6.2.0",
@@ -44,15 +44,15 @@
     },
     "dependencies": {
         "@babel/runtime": "^7.14.8",
+        "axios": "^0.25.0",
         "frontend-scss-mixins": "^1.0.6",
         "get-viewport-options": "^1.0.0",
         "glightbox": "^3.0.9",
         "image-capture": "^0.4.0",
         "imask": "^6.1.0",
-        "axios": "^0.25.0",
-        "moment": "^2.29.1",
         "imports-loader": "^3.0.0",
         "modals-toggle": "^1.0.1",
+        "moment": "^2.29.1",
         "nouislider": "^15.2.0",
         "search-row-hints": "^1.0.2",
         "single-menu": "^1.0.1",
